static/psi4manual/4.0b3/_sources/autodoc_psifiles.txt
.. index:: psioh
.. _`apdx:psiFiles`:

PSIOH Intermediate Files
========================

.. table:: Auxiliary files in |PSIfour|

   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   | File | File Label                  | Contents                                                                                                                 |
   +======+=============================+==========================================================================================================================+
   |    1 | PSIF_OPTKING                |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   11 | PSIF_FILE11                 | geometry optimization, geometry, and gradient                                                                            |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   12 | PSIF_INTCO                  | internal coordinates file, formerly intco.dat                                                                            |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   16 | PSIF_3INDEX                 |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   31 | PSIF_DSCF                   |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   32 | PSIF_CHKPT                  | new libpsio checkpoint file number                                                                                       |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   33 | PSIF_SO_TEI                 |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   34 | PSIF_SO_PK                  |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   35 | PSIF_OEI                    |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   36 | PSIF_SO_ERF_TEI             |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   37 | PSIF_SO_ERFC_TEI            |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   38 | PSIF_SO_R12                 |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   39 | PSIF_SO_R12T1               |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   40 | PSIF_DERINFO                |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   41 | PSIF_SO_PRESORT             |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   42 | PSIF_OLD_CHKPT              | Until we have flexible PSIF_CHKPT this will store previous calculation info                                              |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   43 | PSIF_CIVECT                 | CI vector from DETCI along with string and determinant info                                                              |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   44 | PSIF_AO_DGDBX               | B-field derivative AO integrals over GIAO Gaussians -- only bra-ket permutational symmetry holds                         |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   45 | PSIF_AO_DGDBY               |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   46 | PSIF_AO_DGDBZ               |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   50 | PSIF_PSIMRCC_INTEGRALS      |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   51 | PSIF_PSIMRCC_RESTART        |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   52 | PSIF_MCSCF                  |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   53 | PSIF_TPDM_HALFTRANS         |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   60 | PSIF_DETCAS                 |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   61 | PSIF_LIBTRANS_DPD           | libtrans: All transformed integrals in DPD format are sent here by default                                               |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   62 | PSIF_LIBTRANS_A_HT          | libtrans: Alpha half-transformed integrals in DPD format                                                                 |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   63 | PSIF_LIBTRANS_B_HT          | libtrans: Beta half-tranformed integrals in DPD format                                                                   |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   64 | PSIF_LIBDIIS                | Storage for libdiis                                                                                                      |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   65 | PSIF_DFT_GRID               | Storage for DFT/pseudospectral grid                                                                                      |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   66 | PSIF_DF_TENSOR              |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   67 | PSIF_PS_TENSOR              |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   71 | PSIF_TPDM_PRESORT           |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   72 | PSIF_MO_TEI                 |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   73 | PSIF_MO_OPDM                |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   74 | PSIF_MO_TPDM                |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   75 | PSIF_MO_LAG                 |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   76 | PSIF_AO_OPDM                | PSIF_AO_OPDM also contains AO Lagrangian                                                                                 |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   77 | PSIF_AO_TPDM                |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   78 | PSIF_DBOC                   | dboc:                                                                                                                    |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   79 | PSIF_MO_R12                 |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   80 | PSIF_MO_R12T2               |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   81 | PSIF_MO_AA_TEI              |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   82 | PSIF_MO_BB_TEI              |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   83 | PSIF_MO_AB_TEI              |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   84 | PSIF_MO_AA_TPDM             |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   85 | PSIF_MO_BB_TPDM             |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   86 | PSIF_MO_AB_TPDM             |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   87 | PSIF_AA_PRESORT             | AA UHF twopdm presort file                                                                                               |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   88 | PSIF_BB_PRESORT             | BB UHF twopdm presort file                                                                                               |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   89 | PSIF_AB_PRESORT             | AB UHF twopdm presort file                                                                                               |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   90 | PSIF_MO_HESS                |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   91 | PSIF_CPHF                   |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   92 | PSIF_SO_PKSUPER1            |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   93 | PSIF_SO_PKSUPER2            |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   94 | PSIF_HALFT0                 |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   95 | PSIF_HALFT1                 |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   96 | PSIF_DFSCF_A                | B Matrix containing 3-index tensor in AOs for use with DF-SCF                                                            |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   97 | PSIF_DFSCF_BJ               | B Matrix containing 3-index tensor in AOs with J^-1/2 for use with DF-SCF                                                |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   98 | PSIF_DFSCF_K                | Exchange tensor for DF-SCF                                                                                               |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |   99 | PSIF_DFSCF_BJI              | The three-center integrals for DF-SCF                                                                                    |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  120 | PSIF_SAPT_DIMER             | SAPT Two-Body Dimer                                                                                                      |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  121 | PSIF_SAPT_MONOMERA          | SAPT Two-Body Mon A                                                                                                      |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  122 | PSIF_SAPT_MONOMERB          | SAPT Two-Body Mon B                                                                                                      |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  123 | PSIF_SAPT_AA_DF_INTS        | SAPT AA DF Ints                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  124 | PSIF_SAPT_AB_DF_INTS        | SAPT AB DF Ints                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  125 | PSIF_SAPT_BB_DF_INTS        | SAPT BB DF Ints                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  126 | PSIF_SAPT_AMPS              | SAPT Amplitudes                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  127 | PSIF_SAPT_TEMP              | SAPT Temporary worlds fastest code file                                                                                  |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  128 | PSIF_SAPT_LRINTS            | SAPT0 2-Body linear response LDA integrals                                                                               |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  180 | PSIF_SCF_DB_MOS             | Dual basis set MOs for DB-SCF or Basis-2 Guesses                                                                         |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  181 | PSIF_DFMP2_AIA              | Unfitted three-index MO ints for DFMP2                                                                                   |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  182 | PSIF_DFMP2_QIA              | Fitted-three index MO ints for DFMP2                                                                                     |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  199 | PSIF_SO_D1OEI               | Derivative OEIs are stored in file 199                                                                                   |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  200 | PSIF_SO_D1ERI               | Derivative ERIs are stored in files 200, 201, 202, etc. File 200                                                         |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  220 | PSIF_3B_SAPT_TRIMER         | SAPT Three-Body Trimer                                                                                                   |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  221 | PSIF_3B_SAPT_DIMER_AB       | SAPT Three-Body Dimer AB                                                                                                 |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  222 | PSIF_3B_SAPT_DIMER_AC       | SAPT Three-Body Dimer AC                                                                                                 |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  223 | PSIF_3B_SAPT_DIMER_BC       | SAPT Three-Body Dimer BC                                                                                                 |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  224 | PSIF_3B_SAPT_MONOMER_A      | SAPT Three-Body Mon A                                                                                                    |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  225 | PSIF_3B_SAPT_MONOMER_B      | SAPT Three-Body Mon B                                                                                                    |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  226 | PSIF_3B_SAPT_MONOMER_C      | SAPT Three-Body Mon C                                                                                                    |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  227 | PSIF_3B_SAPT_AA_DF_INTS     |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  228 | PSIF_3B_SAPT_BB_DF_INTS     |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  229 | PSIF_3B_SAPT_CC_DF_INTS     |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  230 | PSIF_3B_SAPT_AMPS           |                                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  251 | PSIF_DCC_IJAK               | CEPA/CC (ij|ak)                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  252 | PSIF_DCC_IJAK2              | CEPA/CC (ij|ak)                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  253 | PSIF_DCC_ABCI3              | CEPA/CC (ia|bc)                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  254 | PSIF_DCC_ABCI5              | CEPA/CC (ia|bc)                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  255 | PSIF_DCC_ABCD1              | CEPA/CC (ab|cd)+                                                                                                         |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  256 | PSIF_DCC_ABCD2              | CEPA/CC (ab|cd)-                                                                                                         |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  257 | PSIF_DCC_IJAB               | CEPA/CC (ij|ab)                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  258 | PSIF_DCC_IAJB               | CEPA/CC (ia|jb)                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  259 | PSIF_DCC_IJKL               | CEPA/CC (ij|kl)                                                                                                          |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  260 | PSIF_DCC_OVEC               | CEPA/CC old vectors for diis                                                                                             |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  261 | PSIF_DCC_EVEC               | CEPA/CC error vectors for diis                                                                                           |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  262 | PSIF_DCC_R2                 | CEPA/CC residual                                                                                                         |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  263 | PSIF_DCC_TEMP               | CEPA/CC temporary storage                                                                                                |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+
   |  264 | PSIF_DCC_T2                 | CEPA/CC t2 amplitudes                                                                                                    |
   +------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------+

